nav transparency correction

--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
     
 </head>
 <body>
-    <h1>Prasoon Priya Rawat</h1>
     <header class="primary-header">
         <div class="container">
             <div class="nav-wrapper">
             <a href="#"><img src="Robotics.png"  height="35px" alt="Manage"></a>
             <button aria-controls="primary-navigation" aria-expanded="false" class="mobile-nav-toggle">
-                <img class="menu-icon" src="menu-icon.svg" alt="" aria-hidden="true" width="30px" height="30px">
-                <img class="close-button" src="close-button.svg" alt="" aria-hidden="true" width="30px" height="30px">
+
                 <span class="visually-hidden">Menu</span>
             </button>
             <nav class="primary-navigation">
@@ -37,7 +35,7 @@
     </header>
 
     <main>
-        <section class="padding-block-900">
+        <section class="text-center-sm-only | padding-block-900">
             <div class="container">
                 <div class="event-columns">
                     <div class="flow">
@@ -45,8 +43,8 @@
                         <p>This is a trial website desgn, which i being created while i'm learning responsive webdevelopment. this project is being done by Kevin Powell on youtube.</p>
                         <button class="button">Get Started</button>
                     </div>
-                    <div>
-                        <img src="DALL·E 2023-01-16 06.08.54 - a 3-joint robotic arm mounted on the table edge in idle state.png" style="border-radius: 50px;" alt="Manage">
+                    <div class="pos">
+                        <img class="max-auto" src="DALL·E 2023-01-16 06.08.54 - a 3-joint robotic arm mounted on the table edge in idle state.png" style="border-radius: 50px;" alt="Manage">
                     </div>
                 </div>
             </div>
